# geodino

./: UNetFormer_baseline.py  UNetFormer_retry.py  UNetFormer_test13.py  UNetFormer_test17.py  UNetFormer_test19.py  UNetFormer_test2.py  UNetFormer_test5.py  UNetFormer_test8.py  UNetFormer_test9.py  lora_utils_test.py  loss_test.py  pyproject.toml  test.py  train_baseline.py  train_plus.py  train_retry.py  train_retry3.py  train_test10.py  train_test11.py  train_test12.py  train_test13.py  train_test14.py  train_test16.py  train_test17.py  train_test18.py  train_test19.py  train_test20.py  train_test6.py  utils.py  utils_1.py
models/decoder/: UPernet.py
testbase/: UNetFormer_plus.py  UNetFormer_test10.py  UNetFormer_test11.py  UNetFormer_test12.py  UNetFormer_test14.py  UNetFormer_test15.py  UNetFormer_test16.py  UNetFormer_test18.py  UNetFormer_test19.py  UNetFormer_test21.py  UNetFormer_test22.py  UNetFormer_test23.py  UNetFormer_test3.py  UNetFormer_test6.py  train_retry2.py  train_selfteaching.py  train_test1.py  train_test15.py  train_test17.py  train_test18.py  train_test2.py  train_test20.py  train_test21.py  train_test22.py  train_test23.py  train_test3.py  train_test4.py  train_test5.py  train_test7.py  train_test8.py  train_test9.py  utils.py  utils_1.py  utils_new.py
testsV/: cfg.py  loss_test1.py  train_test1.py  utils_new.py
