[project]
name = "dinov3-geo"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "absl-py==2.3.1",
    "accelerate==1.10.1",
    "acvl-utils==0.2.1",
    "affine==2.4.0",
    "asttokens==3.0.0",
    "attrs==25.4.0",
    "backcall==0.2.0",
    "batchgenerators==0.25.1",
    "batchgeneratorsv2==0.3.0",
    "blosc2==2.5.1",
    "certifi==2025.8.3",
    "charset-normalizer==3.4.3",
    "click==8.1.8",
    "click-plugins==1.1.1.2",
    "cligj==0.7.2",
    "connected-components-3d==3.25.0",
    "contourpy==1.3.0",
    "cycler==0.12.1",
    "decorator==5.2.1",
    "einops==0.8.1",
    "executing==2.2.1",
    "fft-conv-pytorch==1.2.0",
    "filelock==3.13.1",
    "fonttools==4.60.0",
    "fsspec==2024.6.1",
    "future==1.0.0",
    "grpcio==1.75.1",
    "hf-xet==1.1.10",
    "huggingface-hub==0.35.1",
    "idna==3.10",
    "imageio==2.37.0",
    "importlib-metadata==8.7.0",
    "importlib-resources==6.5.2",
    "ipython==8.12.3",
    "jedi==0.19.2",
    "jinja2==3.1.4",
    "joblib==1.5.2",
    "kiwisolver==1.4.7",
    "lazy-loader==0.4",
    "linecache2==1.0.0",
    "markdown==3.9",
    "markupsafe==2.1.5",
    "matplotlib==3.9.4",
    "matplotlib-inline==0.1.7",
    "modelscope>=1.32.0",
    "mpmath==1.3.0",
    "msgpack==1.1.2",
    "ndindex==1.10.0",
    "networkx==3.2.1",
    "nibabel==5.3.2",
    "numpy==2.0.2",
    "nvidia-cublas-cu11==11.11.3.6",
    "nvidia-cuda-cupti-cu11==11.8.87",
    "nvidia-cuda-nvrtc-cu11==11.8.89",
    "nvidia-cuda-runtime-cu11==11.8.89",
    "nvidia-cudnn-cu11==9.1.0.70",
    "nvidia-cufft-cu11==10.9.0.58",
    "nvidia-curand-cu11==10.3.0.86",
    "nvidia-cusolver-cu11==11.4.1.48",
    "nvidia-cusparse-cu11==11.7.5.86",
    "nvidia-nccl-cu11==2.20.5",
    "nvidia-nvtx-cu11==11.8.86",
    "opencv-python==4.12.0.88",
    "packaging==25.0",
    "pandas==2.3.3",
    "parso==0.8.5",
    "peft==0.17.1",
    "pexpect==4.9.0",
    "pickleshare==0.7.5",
    "pillow==11.0.0",
    "prompt-toolkit==3.0.52",
    "protobuf==6.32.1",
    "psutil==7.1.0",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "py-cpuinfo==9.0.0",
    "pygments==2.19.2",
    "pyparsing==3.2.5",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "pywavelets==1.6.0",
    "pyyaml==6.0.2",
    "rasterio==1.4.3",
    "regex==2025.9.18",
    "requests==2.32.5",
    "safetensors==0.6.2",
    "scikit-image==0.24.0",
    "scikit-learn==1.6.1",
    "scipy==1.13.1",
    "simpleitk==2.5.2",
    "six==1.17.0",
    "stack-data==0.6.3",
    "sympy==1.13.3",
    "tensorboard==2.20.0",
    "tensorboard-data-server==0.7.2",
    "threadpoolctl==3.6.0",
    "tifffile==2024.8.30",
    "timm==1.0.19",
    "tokenizers==0.22.1",
    "torch==2.4.1",
    "torch-tb-profiler==0.4.3",
    "torchaudio==2.4.1",
    "torchcam>=0.3.1",
    "torchvision==0.19.1",
    "tqdm==4.67.1",
    "traceback2==1.4.0",
    "traitlets==5.14.3",
    "triton==3.0.0",
    "typing-extensions==4.12.2",
    "tzdata==2025.2",
    "unittest2==1.1.0",
    "urllib3==2.5.0",
    "wcwidth==0.2.14",
    "werkzeug==3.1.3",
    "zipp==3.23.0",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu118", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu118", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchaudio = [
  { index = "pytorch-cu118", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true
